[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Yarodash <yaroslav.lukyanets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
